infrastructure/kustomize/base/cryptochords-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptochords-web-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: cryptochords-web
